@@ -1,3 +1,7 @@
+2006-06-16  Hubert Figuiere  <hub@figuiere.net>
+
+	* library.c: D30 has DCIM ROOT bug
+
 2006-06-13  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.{ch}: Updated MTP defines from libmtp.
